tests/res/assignment/error_lvalue_expr.say
say a = 0;
say b = 0;
(a + b) = 1; // error: Invalid assignment